--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ default_asides: [custom/asides/blogs.html, asides/recent_posts.html, asides/twit
 
 # Github repositories
 github_user: torbjoernk
-github_repo_count: 0
+github_repo_count: 3
 github_show_profile_link: true
 github_skip_forks: true
 
@@ -74,10 +74,9 @@ twitter_tweet_button: false
 # Google +1
 google_plus_one: false
 google_plus_one_size: medium
-
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: 107387250106111263866
 googleplus_hidden: false
 
 # Pinboard
