--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ titlecase: false       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [custom/asides/blogs.html, asides/recent_posts.html, asides/twitter.html, asides/github.html]
+default_asides: [custom/asides/blogs.html, asides/recent_posts.html, asides/googleplus.html, asides/twitter.html, asides/github.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -72,7 +72,7 @@ twitter_show_follower_count: false
 twitter_tweet_button: false
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
@@ -88,7 +88,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: torbjoernklatt
 disqus_show_comment_count: false
 
 # Google Analytics
